--- a/ConfluxMobile/Conflux.UI/Views/BlacklistPage.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/BlacklistPage.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:converters="using:Conflux.UI.Converters"
     mc:Ignorable="d" Background="WhiteSmoke">
 
     <Page.Transitions>
@@ -12,7 +13,18 @@
         </TransitionCollection>
     </Page.Transitions>
 
-    <Grid Margin="0, 22, 0, 0">
+    <Page.BottomAppBar>
+        <CommandBar>
+            <AppBarButton Label="Remove" Icon="Cancel" Click="OnRemoveClick"/>
+        </CommandBar>
+    </Page.BottomAppBar>
+    
+    <Page.Resources>
+        <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+        <converters:NegatedBoolToVisibilityConverter x:Key="NegatedBoolToVisibilityConverter"/>
+    </Page.Resources>
+
+    <Grid Margin="0, 22, 0, 20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -27,15 +39,43 @@
         </StackPanel>
 
         <Grid Grid.Row="1" Margin="19,9.5,19,0">
-            <RichTextBlock TextWrapping="Wrap" Foreground="{StaticResource MediumForegroundBrush}"
-                       IsTextSelectionEnabled="False"
-                       FontSize="17">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <RichTextBlock Grid.Row="0" TextWrapping="Wrap" Foreground="{StaticResource MediumForegroundBrush}"
+                           IsTextSelectionEnabled="False"
+                           FontSize="17" Visibility="{Binding IsEmptyBlacklist, Converter={StaticResource BoolToVisibilityConverter}}">
                 <Paragraph>
                     Fake or spam-like events will be displayed here. They are always ignored when you search them.
                 </Paragraph>
                 <Paragraph/>
                 <Paragraph>Currently, you have no such events in this list.</Paragraph>
             </RichTextBlock>
+            <ScrollViewer Grid.Row="1" ZoomMode="Disabled" HorizontalScrollMode="Disabled" VerticalScrollMode="Enabled">
+                <ListView ItemsSource="{Binding Events}"
+                      Visibility="{Binding IsEmptyBlacklist, Converter={StaticResource NegatedBoolToVisibilityConverter}}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <StackPanel.ChildrenTransitions>
+                                    <TransitionCollection>
+                                        <AddDeleteThemeTransition />
+                                    </TransitionCollection>
+                                </StackPanel.ChildrenTransitions>
+                                <CheckBox IsChecked="{Binding Selected, Mode=TwoWay}"
+                                      HorizontalAlignment="Left">
+                                    <CheckBox.ContentTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Event.Title}" Foreground="Teal" FontSize="25" MaxLines="3"></TextBlock>
+                                        </DataTemplate>
+                                    </CheckBox.ContentTemplate>
+                                </CheckBox>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </ScrollViewer>
         </Grid>
     </Grid>
 </Page>
