--- a/ConfluxMobile/Conflux.UI/Controls/EventItem.xaml
+++ b/ConfluxMobile/Conflux.UI/Controls/EventItem.xaml
@@ -12,9 +12,57 @@
         <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
         <converters:BoolToColorConverter x:Key="VisitedEventColorConverter"/>
         <converters:DateSentenceConverter x:Key="DateSentenceConverter"/>
+        <converters:DateToDayConverter x:Key="DateToDayConverter"/>
+        <converters:DateToMonthConverter x:Key="DateToMonthConverter"/>
     </UserControl.Resources>
 
     <Grid Margin="0, 10">
+        <Grid.Transitions>
+            <TransitionCollection>
+                <EntranceThemeTransition 
+                    FromHorizontalOffset="0"
+                    FromVerticalOffset="20"/>
+            </TransitionCollection>
+        </Grid.Transitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="55"/>
+            <ColumnDefinition Width="15"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Column="0" 
+              HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0" Text="{Binding StartTime, Converter={StaticResource DateToDayConverter}}" Foreground="Black"
+                       FontSize="20" HorizontalAlignment="Center"/>
+            <TextBlock Grid.Row="1" Text="{Binding StartTime, Converter={StaticResource DateToMonthConverter}}" Foreground="Teal"
+                       FontSize="20" HorizontalAlignment="Center"/>
+        </Grid>
+        <Grid Grid.Column="1" 
+              Margin="3, 5, 10, 5" Background="Goldenrod"/>
+        <Grid Grid.Column="2"
+              VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0" Text="{Binding Title}" Foreground="{Binding Visited, Converter={StaticResource VisitedEventColorConverter}}"
+                       FontSize="26" TextWrapping="Wrap" TextTrimming="CharacterEllipsis"
+                       LineHeight="26" MaxLines="3"/>
+            <TextBlock Grid.Row="1" Text="{Binding Location.Name}" Foreground="Black"
+                       TextWrapping="Wrap" TextTrimming="CharacterEllipsis"
+                       LineHeight="15" MaxLines="2"/>
+            <TextBlock Grid.Row="2" Text="{Binding EndTime, Converter={StaticResource DateSentenceConverter}, ConverterParameter='End'}"
+                       Foreground="{StaticResource PhoneMidBrush}" LineHeight="15"
+                       Visibility="{Binding EndTime, Converter={StaticResource NullToVisibilityConverter}}"/>
+            
+        </Grid>
+    </Grid>
+
+    <!--<Grid Margin="0, 10">
        <Grid.ChildrenTransitions>
             <TransitionCollection>
                 <AddDeleteThemeTransition />
@@ -52,5 +100,5 @@
                    TextWrapping="Wrap" TextTrimming="CharacterEllipsis"
                    FontSize="16" Text="{Binding Location.Name}" Foreground="Teal"
                    MaxLines="2"/>
-    </Grid>
+    </Grid>-->
 </UserControl>
