--- a/ConfluxMobile/Conflux.UI/Views/SharedInfo.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/SharedInfo.xaml
@@ -17,7 +17,7 @@
         </TransitionCollection>
     </Page.Transitions>
 
-    <Grid Margin="0, 22, 0, 0">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
