Added EventsCalendar initial version.

--- a/ConfluxMobile/Conflux.UI/Views/MainHub.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/MainHub.xaml
@@ -102,7 +102,9 @@
                 </DataTemplate>
             </HubSection>
             <HubSection Header="FRIENDS">
-
+                <DataTemplate>
+                    <controls:EventsCalendar />
+                </DataTemplate>
             </HubSection>
         </Hub>
     </Grid>
